Adding Spock framework for groovy with Maven